# parsers

./: README.md  pyproject.toml
src/labda_parsers/: __init__.py  actigraph.py  axivity.py  parser.py
src/labda_parsers/sens/: file.py
