[project]
name = "labda-parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josef Heidler", email = "heidlerjosef@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "scikit-digital-health>=0.17.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
